test/types/range/hilde/byTypeError1.good
byTypeError1.chpl:1: error: can't apply 'by' to a range with idxType int(8) using a step of type uint(64)
byTypeError1.chpl:3: error: can't apply 'by' to a range with idxType int(16) using a step of type uint(64)
byTypeError1.chpl:5: error: can't apply 'by' to a range with idxType int(32) using a step of type uint(64)
byTypeError1.chpl:7: error: can't apply 'by' to a range with idxType uint(8) using a step of type uint(64)
byTypeError1.chpl:9: error: can't apply 'by' to a range with idxType uint(16) using a step of type uint(64)
byTypeError1.chpl:11: error: can't apply 'by' to a range with idxType uint(32) using a step of type uint(64)
