test/types/range/hilde/byTypeError1.prediff
#!/bin/bash --norc

testname=$1
outputfile=$2
compiler=$3

# sort the output
grep "byTypeError1" $outputfile > $outputfile.tmp
mv $outputfile.tmp $outputfile
